--- a/app.json
+++ b/app.json
@@ -1,34 +1,1 @@
-{
-  "expo": {
-    "name": "Budget Tracker",
-    "slug": "budget-tracker",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "userInterfaceStyle": "automatic",
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "android": {
-      "package": "com.yourname.budgettracker",
-      "versionCode": 1,
-      "permissions": []
-    },
-    "plugins": [
-      [
-        "expo-build-properties",
-        {
-          "android": {
-            "compileSdkVersion": 34,
-            "targetSdkVersion": 34,
-            "buildToolsVersion": "34.0.0"
-          }
-        }
-      ]
-    ],
-    "extra": {
-      "eas": {
-        "projectId": "a1723b36-721b-47ac-9d7a-2762143da6a3"
-      }
-    }
-  }
-}
+{ "expo": { "name": "Budget Tracker", "slug": "budget-tracker", "version": "1.0.0", "orientation": "portrait", "userInterfaceStyle": "automatic", "assetBundlePatterns": ["**/*"], "android": { "package": "com.yourname.budgettracker", "versionCode": 1 } } }
