--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,6 @@
-name: Build Android APK
+name: Build APK
 
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -10,33 +8,17 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
         
-    - name: Setup EAS CLI
-      run: npm install -g eas-cli
-      
     - name: Install dependencies
-      run: npm install
-      
-    - name: Login to Expo
       run: |
-        export EXPO_TOKEN=${{ secrets.EXPO_TOKEN }}
-        eas login
+        npm install -g eas-cli
+        npm install
         
-    - name: Build Android APK
+    - name: Build APK
       run: eas build -p android --profile preview --non-interactive
       env:
         EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-      
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: android-apk
-        path: '*.apk'
