--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,35 @@
 name: Build APK
 
-on:
-  workflow_dispatch:
+on: workflow_dispatch: push: branches: [ main ]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+jobs: build: runs-on: ubuntu-latest
+
+steps:
+- name: Checkout repository
+  uses: actions/checkout@v4
+  
+- name: Setup Node.js
+  uses: actions/setup-node@v4
+  with:
+    node-version: '20'
+    cache: 'npm'
     
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-        
-    - name: Install dependencies
-      run: |
-        npm install -g eas-cli
-        npm install
-        
-    - name: Build APK
-      run: eas build -p android --profile preview --non-interactive
-      env:
-        EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+- name: Install EAS CLI
+  run: npm install -g @expo/eas-cli@latest
+  
+- name: Install dependencies
+  run: npm ci
+    
+- name: Build APK
+  run: eas build -p android --profile preview --non-interactive --clear-cache
+  env:
+    EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+    
+- name: Upload APK artifact
+  uses: actions/upload-artifact@v4
+  with:
+    name: budget-tracker-apk-${{ github.run_number }}
+    path: |
+      *.apk
+      **/*.apk
+    retention-days: 30
