--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
-name: Build APK
+name: Build Android APK
 
-on: workflow_dispatch: push: branches: [ main ]
+on: push: branches: [ main ] workflow_dispatch:
 
 jobs: build: runs-on: ubuntu-latest
 
@@ -20,11 +20,11 @@ steps:
 - name: Install dependencies
   run: npm ci
     
-- name: Build APK
+- name: Build Android APK
   run: eas build -p android --profile preview --non-interactive --clear-cache
   env:
     EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-    
+  
 - name: Upload APK artifact
   uses: actions/upload-artifact@v4
   with:
