--- a/app.json
+++ b/app.json
@@ -1,1 +1,14 @@
-{ "expo": { "name": "Budget Tracker", "slug": "budget-tracker", "version": "1.0.0", "orientation": "portrait", "userInterfaceStyle": "automatic", "assetBundlePatterns": ["**/*"], "android": { "package": "com.yourname.budgettracker", "versionCode": 1 } } }
+{
+  "expo": {
+    "name": "Budget Tracker",
+    "slug": "budget-tracker",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "userInterfaceStyle": "automatic",
+    "assetBundlePatterns": ["**/*"],
+    "android": {
+      "package": "com.yourname.budgettracker",
+      "versionCode": 1
+    }
+  }
+}
