--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,40 @@
 name: Build Android APK
 
-on: push: branches: [ main ] workflow_dispatch:
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
 
-jobs: build: runs-on: ubuntu-latest
-
-steps:
-- name: Checkout repository
-  uses: actions/checkout@v4
-  
-- name: Setup Node.js
-  uses: actions/setup-node@v4
-  with:
-    node-version: '20'
-    cache: 'npm'
+jobs:
+  build:
+    runs-on: ubuntu-latest
     
-- name: Install EAS CLI
-  run: npm install -g @expo/eas-cli@latest
-  
-- name: Install dependencies
-  run: npm ci
-    
-- name: Build Android APK
-  run: eas build -p android --profile preview --non-interactive --clear-cache
-  env:
-    EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-  
-- name: Upload APK artifact
-  uses: actions/upload-artifact@v4
-  with:
-    name: budget-tracker-apk-${{ github.run_number }}
-    path: |
-      *.apk
-      **/*.apk
-    retention-days: 30
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        
+    - name: Install EAS CLI
+      run: npm install -g @expo/eas-cli@latest
+      
+    - name: Install dependencies
+      run: npm ci
+        
+    - name: Build Android APK
+      run: eas build -p android --profile preview --non-interactive --clear-cache
+      env:
+        EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+      
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: budget-tracker-apk-${{ github.run_number }}
+        path: |
+          *.apk
+          **/*.apk
+        retention-days: 30
