--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: Build Android APK
+name: Build APK
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 jobs:
   build:
@@ -20,16 +20,16 @@ jobs:
         cache: 'npm'
         
     - name: Install EAS CLI
-      run: npm install -g @expo/eas-cli@latest
+      run: npm install -g eas-cli@latest
       
     - name: Install dependencies
       run: npm ci
         
-    - name: Build Android APK
+    - name: Build APK
       run: eas build -p android --profile preview --non-interactive --clear-cache
       env:
         EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-      
+        
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
       with:
