--- a/eas.json
+++ b/eas.json
@@ -7,10 +7,14 @@
     "preview": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleRelease"
       },
       "env": {
         "NODE_ENV": "production"
+      },
+      "cache": {
+        "disabled": false
       }
     },
     "production": {
