--- a/app.json
+++ b/app.json
@@ -9,10 +9,10 @@
     "platforms": ["ios", "android", "web"],
     "android": {
       "package": "com.yourname.budgettracker",
-      "versionCode": 1,
-      "compileSdkVersion": 34,
-      "targetSdkVersion": 34,
-      "buildToolsVersion": "34.0.0"
-    }
+      "versionCode": 1
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
