--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,11 @@ jobs:
     - name: Install EAS CLI
       run: npm install -g eas-cli@latest
       
+    - name: Remove package-lock.json
+      run: rm -f package-lock.json
+      
     - name: Install dependencies
-      run: npm ci
+      run: npm install
       
     - name: Initialize EAS project
       run: eas init --non-interactive --force
